--- a/options.html
+++ b/options.html
@@ -1,8 +1,8 @@
 <html>
 <head>
   <title>HabitRPG Chrome Settings</title>
-  <script type="text/javascript" src="jquery.js"></script>
-  <script type="text/javascript" src="habitrpg-options.js"></script>
+  <script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
+  <script type="text/javascript" src="options.js"></script>
   </script>
 </head>
 <body>
