Added title to "productive websites" textarea

--- a/options.html
+++ b/options.html
@@ -14,7 +14,7 @@
 reddit.com
 9gag.com
 facebook.com</textarea></p>
-
+p>Websites where you're productive (one domain per line)</p>
   <p><textarea id="goodDomains" rows="10">
 lifehacker.com
 codeacadamy.com
