Changed a default URL

--- a/options.html
+++ b/options.html
@@ -18,7 +18,7 @@ facebook.com</textarea></p>
   <p><textarea id="goodDomains" rows="10">
 lifehacker.com
 codeacadamy.com
-khanacadamy.com</textarea></p>
+khanacadamy.org</textarea></p>
 
     <p><button type="submit">Save</button></p>
   </form>
