--- a/options.html
+++ b/options.html
@@ -3,12 +3,11 @@
   <title>HabitRPG Chrome Settings</title>
   <script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
   <script type="text/javascript" src="options.js"></script>
-  </script>
 </head>
 <body>
   <div style="background-color:green;" id="status"></div>
   <form id="habitrpgForm">
-    <p>HabitRPG UserId: <input id="uid" type="text"></input></p>
+    <p>HabitRPG UserId: <input id="uid" type="text" /></p>
     <p>Websites where you procrastinate (one domain per line)</p>
     <p><textarea id="viceDomains" rows="10">
 reddit.com
