--- a/options.html
+++ b/options.html
@@ -4,11 +4,20 @@
   <script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
   <script type="text/javascript" src="options.js"></script>
   </script>
+  <style>
+    .state { display: none; }
+    .state.good { background: green; display: block; }
+    .state.bad { background: red; display: block; }
+    .visible { display: block !important; }
+    #ActivatorOptions > div { display: none; }
+  </style>
 </head>
 <body>
-  <div style="background-color:green;" id="status"></div>
+  <div class="state" id="status">Options Saved.</div>
   <form id="habitrpgForm">
-    <p>HabitRPG UserId: <input id="uid" type="text"></input></p>
+    <div id="EmptyUID" class="state">If the UserId is field empty, this extension does not work</div>
+    <label for="uid">HabitRPG UserId:</label><input id="uid" type="text"/></br>
+
     <p>Websites where you procrastinate (one domain per line)</p>
     <p><textarea id="viceDomains" rows="10">
 reddit.com
@@ -19,6 +28,23 @@ facebook.com</textarea></p>
 lifehacker.com
 codeacadamy.com
 khanacadamy.org</textarea></p>
+    
+    If you type an empty row into one section, then the extension will detect when the chrome lost or has focus<br/>
+    eg: add the empty line to the top of the productive websites. save your settings. and switch to your working program. Voala the extension keep thinking you are working:)
+    
+    <p>
+      <label for="sendInterval">Send to HabitRPG interval:</label><input type="number" id="sendInterval" value="5" min="1" /> minute <br />
+    </p>
+    <label for="activatorName">How would you like to control the extension:</label>
+    <select id="activatorName">
+      <option value="alwayson">Always on</option>
+      <option value="fromOptions">From here</option>
+    </select><br />
+    <div id="ActivatorOptions">
+      <div id="ActOpts-fromOptions">
+        <label for="ActivatorState">Active:</label><input type="checkbox" id="isActive" />
+      </div>
+    </div>
 
     <p><button type="submit">Save</button></p>
   </form>
