--- a/options.html
+++ b/options.html
@@ -39,10 +39,18 @@ khanacadamy.org</textarea></p>
     <select id="activatorName">
       <option value="alwayson">Always on</option>
       <option value="fromOptions">From here</option>
+      <option value="days">Days and hours</option>
+      <option value="tomatoes">From http://tomato.es</option>
     </select><br />
     <div id="ActivatorOptions">
       <div id="ActOpts-fromOptions">
         <label for="ActivatorState">Active:</label><input type="checkbox" id="isActive" />
+      </div>
+      <div id="ActOpts-tomatoes">
+        
+      </div>
+      <div id="ActOpts-days">
+        
       </div>
     </div>
 
