Added custom interval

--- a/options.html
+++ b/options.html
@@ -8,6 +8,7 @@
   <div style="background-color:green;" id="status"></div>
   <form id="habitrpgForm">
     <p>HabitRPG UserId: <input id="uid" type="text" /></p>
+  <p>Score every <input id="interval" type="number" min="5" max="30" maxlength="2"/> minutes</p>
     <p>Websites where you procrastinate (one domain per line)</p>
     <p><textarea id="viceDomains" rows="10">
 reddit.com
