--- a/options.html
+++ b/options.html
@@ -6,10 +6,12 @@
   </script>
   <style>
     input[type=number] { width: 50px; }
+    input { margin-left: 5px; margin-right: 5px; }
     .state { display: none; }
     .state.good { background: green; display: block; }
     .state.bad { background: red; display: block; }
     .visible { display: block !important; }
+    .day { display: inline-block; margin: 5px; text-align: center; }
     #ActivatorOptions > div { display: none; }
   </style>
 </head>
@@ -40,20 +42,20 @@ khanacadamy.org</textarea></p>
     <select id="activatorName">
       <option value="alwayson">Always on</option>
       <option value="fromOptions">From here</option>
-      <option value="webpage">Via website</option>
-      <option value="tomatoes">From http://tomato.es</option>
       <option value="days">Days and hours</option>
+      <option value="webpage">Via website</option>
+      <option value="tomatoes">Via http://tomato.es</option>
     </select><br />
     <div id="ActivatorOptions">
       <div id="ActOpts-fromOptions">
         <label for="isActive">Active:</label><input type="checkbox" id="isActive" />
       </div>
       <div id="ActOpts-webpage">
-        <label for="watchedUrl">Url:</label><input type="text" id="watchedUrl" /> ( Started with 'http://' or 'https://' )
-      </div>
-      <div id="ActOpts-tomatoes">
+        <label for="watchedUrl">Url:</label><input type="text" id="watchedUrl" /> ( Started with 'http://' or 'https://' or leave completle blank)
       </div>
       <div id="ActOpts-days">
+      </div>
+      <div id="ActOpts-tomatoes">
       </div>
     </div>
 
