Every thinks works

--- a/options.html
+++ b/options.html
@@ -34,7 +34,7 @@
     </select><br />
     <div id="ActivatorOptions">
       <div id="ActOpts-webpage">
-        <label for="watchedHost">Url:</label><input type="text" id="watchedHost" /> ( Started with 'http://' or 'https://' or leave completle blank)
+        <label for="watchedUrl">Url:</label><input type="text" id="watchedUrl" /> ( Started with 'http://' or 'https://' or leave completle blank)
       </div>
       <div id="ActOpts-days">
       </div>
