--- a/options.html
+++ b/options.html
@@ -54,6 +54,12 @@ khanacadamy.org</textarea></p>
     eg: add the empty line to the top of the productive websites. save your settings. and switch to your working program. Voala the extension keep thinking you are working:)
     
   </div>
+
+  <div class="section">
+    <h4><a href="http://tomato.es">Tomatoes</a> linkage</h4>
+    <p><label for="tomatoesIsActive">Enabled</label><input id="tomatoesIsActive" type="checkbox" /></p>
+        
+  </div>
   
   <p><button type="submit">Save</button></p>
 
