http://tomato.es linkage

--- a/options.html
+++ b/options.html
@@ -30,6 +30,7 @@
     <select id="activatorName">
       <option value="alwayson">Always on</option>
       <option value="webpage">Via website</option>
+      <option value="tomatoes">Via http://tomato.es</option>
       <option value="days">Days and hours</option>
     </select><br />
     <div id="ActivatorOptions">
