--- a/options.html
+++ b/options.html
@@ -17,8 +17,8 @@ facebook.com</textarea></p>
 <p>Websites where you're productive (one domain per line)</p>
   <p><textarea id="goodDomains" rows="10">
 lifehacker.com
-codeacadamy.com
-khanacadamy.org</textarea></p>
+codecademy.com
+khanacademy.org</textarea></p>
 
     <p><button type="submit">Save</button></p>
   </form>
