--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
 <html>
-<img src ="img/popuptemplate.png"/>
-<!--<a href = "options.html" target="_blank">Options</a>-->
+<!--<img src ="img/popuptemplate.png"/>-->
+<a href = "options.html" target="_blank">Options</a>
 </html>
 
