Cosmetic changes to options&popup

--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,31 @@
 <html>
-<!--<img src ="img/popuptemplate.png"/>-->
+<head>
+  <title>HabitRPG Chrome Popup</title>
+  <script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
+  <script type="text/javascript" src="popup.js"></script>
+</head>
+<body style="width:200px; font-family:arial, courier, sans-serif">
+
+<div id="workStatus"></div>
+
 <a href = "options.html" target="_blank">Options</a>
+<a href = "http://www.habitrpg.com" target="_blank">HabitRPG</a>
+
+</body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
