--- a/options.html
+++ b/options.html
@@ -4,14 +4,20 @@
   <script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
   <script type="text/javascript" src="options.js"></script>
 </head>
-<body>
+<body style="font-family:arial, courier, sans-serif">
   <div style="background-color:green;" id="status"></div>
+  <h4>API Settings</h4>
   <form id="habitrpgForm">
-    <p>HabitRPG UserId: <input id="uid" type="text" /></p>
-	<p>HabitRPG API Token: <input id="apiToken" type="text" /></p>
-	<p>Work Hours: <input id="workStart" size="2" type="number" min="0" max="24" maxlength="2"/> to <input id="workEnd" size="2" type="number" min="0" max="24" maxlength="2"/> <br />
-	For always on set to 0 & 24 </p>
+    <p>HabitRPG UserId: <input id="uid" type="text" /> <br />
+	HabitRPG API Token: <input id="apiToken" type="text" /><br />
+	Get the above two codes by logging in to <a href="https://habitrpg.com/">HabitRPG </a> and checking the settings menu in the top right. 
+	</p>
+	<h4>Settings</h3>
+	<p>Work Hours:<input id="workStart" size="2" type="number" min="0" max="24" maxlength="2"/> to <input id="workEnd" size="2" type="number" min="0" max="24" maxlength="2"/><br />
+	Work mode sets the hours of the day you wish to productive. During these hours any websites you place in the procrastinate list will hurt your HabitRPG character. </p>
 	<p>Score every <input id="interval" size="2" type="number" min="5" max="30" maxlength="2"/> minutes</p>
+
+<h4>Websites</h3>
     <p>Websites where you procrastinate (one domain per line)</p>
     <p><textarea id="viceDomains" rows="10">
 reddit.com
