--- a/options.html
+++ b/options.html
@@ -1,19 +1,24 @@
 <html>
 	<head>
 		<title>HabitRPG Chrome Settings</title>
-		<script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
+		<script type="text/javascript" src="vendor/jquery.js"></script>
 		<script type="text/javascript" src="vendor/bootstrap.min.js"></script>
 		<script type="text/javascript" src="options.js"></script>
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
 	<body>
-		<div class="jumbotron masthead">
-			<div class="container">
-				<h1>HabitRPG Chrome Settings</h1>
+		<div id="head">
+			<div class="container-fluid">
+				<div class="row-fluid">
+					<div class="span5 offset2" id="head-title">
+						<h1>HabitRPG Chrome Settings</h1>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="container">
+		<br />
+		<div class="container" id="wrap">
 			<div class="row">
 				<div id="messages"></div>
 
@@ -32,7 +37,7 @@
 							<input min="0" id="workStart" max="24" maxlength="2" type="number" size="2" />
 							to
 							<input min="0" id="workEnd" max="24" maxlength="2" type="number" size="2" />
-							<span class="help-block">For always on set to 0 &amp; 24 </span>
+							<a id="alwaysOn" href="#">Always On</a>
 						</div>
 					</div>
 					<div class="control-group">
