Fixed the footer links

--- a/options.html
+++ b/options.html
@@ -76,13 +76,11 @@ kahnacademy.com</textarea>
 		</div>
 		<footer class="footer">
 		<div class="container">
-			<!--$g9-->
-			<!--$$g9-->
 			<div>
 				<ul>
 					<li>Copyright &copy; 2012 OCDevel LLC</li>
 					<li>
-					<a href="/splash.html">About</a>
+					<a target="_blank" href="http://habitrpg.com/splash.html">About</a>
 					</li>
 					<li>
 					<a target="_blank" href="http://habitrpg.tumblr.com/">Blog</a>
@@ -103,10 +101,10 @@ kahnacademy.com</textarea>
 					<a target="_blank" href="https://github.com/lefnire/habitrpg#contact">Contact</a>
 					</li>
 					<li>
-					<a href="/privacy">Privacy</a>
+					<a target="_blank" href="http://habitrpg.com/privacy">Privacy</a>
 					</li>
 					<li>
-					<a href="/terms">Terms</a>
+					<a target="_blank" href="http://habitrpg.com/terms">Terms</a>
 					</li>
 				</ul>
 			</div>
