--- a/options.html
+++ b/options.html
@@ -1,35 +1,119 @@
 <html>
-<head>
-  <title>HabitRPG Chrome Settings</title>
-  <script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
-  <script type="text/javascript" src="options.js"></script>
-</head>
-<body style="font-family:arial, courier, sans-serif">
-  <div style="background-color:green;" id="status"></div>
-  <h4>API Settings</h4>
-  <form id="habitrpgForm">
-    <p>HabitRPG UserId: <input id="uid" type="text" /> <br />
-	HabitRPG API Token: <input id="apiToken" type="text" /><br />
-	Get the above two codes by logging in to <a href="https://habitrpg.com/">HabitRPG </a> and checking the settings menu in the top right. 
-	</p>
-	<h4>Settings</h3>
-	<p>Work Hours:<input id="workStart" size="2" type="number" min="0" max="24" maxlength="2"/> to <input id="workEnd" size="2" type="number" min="0" max="24" maxlength="2"/><br />
-	Work mode sets the hours of the day you wish to productive. During these hours any websites you place in the procrastinate list will hurt your HabitRPG character. </p>
-	<p>Score every <input id="interval" size="2" type="number" min="5" max="30" maxlength="2"/> minutes</p>
+	<head>
+		<title>HabitRPG Chrome Settings</title>
+		<script type="text/javascript" src="vendor/jquery.js"></script>
+		<script type="text/javascript" src="vendor/bootstrap.min.js"></script>
+		<script type="text/javascript" src="options.js"></script>
+		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
+	</head>
+	<body>
+		<div id="head">
+			<div class="container-fluid">
+				<div class="row-fluid">
+					<div class="span5 offset2" id="head-title">
+						<h1>HabitRPG Chrome Settings</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+		<br />
+		<div class="container" id="wrap">
+			<div class="row">
+				<div id="messages"></div>
 
-<h4>Websites</h3>
-    <p>Websites where you procrastinate (one domain per line)</p>
-    <p><textarea id="viceDomains" rows="10">
+				<form id="habitrpgForm" class="form-horizontal">
+					<div class="control-group">
+						<label for="uid" class="control-label">HabitRPG UserId:</label>
+						<div class="controls"><input type="text" id="uid" name="uid" /></div>
+					</div>
+					<div class="control-group">
+						<label for="apiToken" class="control-label">HabitRPG API Token:</label>
+						<div class="controls"><input id="apiToken" name="apiToken" type="text" /></div>
+					</div>
+					<div class="control-group" id="workHours">
+						<label class="control-label">Work Hours</label>
+						<div class="controls">
+							<input min="0" id="workStart" max="24" maxlength="2" type="number" size="2" />
+							to
+							<input min="0" id="workEnd" max="24" maxlength="2" type="number" size="2" />
+							<a id="alwaysOn" href="#">Always On</a>
+						</div>
+					</div>
+					<div class="control-group">
+						<label for="interval" class="control-label">Score every</label>
+						<div class="controls">
+							<input type="number" name="interval" size="2" min="5" max="30" maxlength="2" id="interval" /> minutes
+						</div>
+					</div>
+					<div class="control-group">
+						<label for="viceDomains" class="control-label">Websites where you procrastinate</label>
+						<div class="controls">
+							<textarea id="viceDomains" name="viceDomains" rows="10">
 reddit.com
 9gag.com
-facebook.com</textarea></p>
-<p>Websites where you're productive (one domain per line)</p>
-  <p><textarea id="goodDomains" rows="10">
+facebook.com</textarea>
+							<span class="help-block">One domain per line</span>
+						</div>
+					</div>
+					<div class="control-group">
+						<label for="goodDomains" class="control-label">Websites where you're productive</label>
+						<div class="controls">
+							<textarea id="goodDomains" name="goodDomains" rows="10">
 lifehacker.com
 codecademy.com
-khanacademy.org</textarea></p>
-
-    <p><button type="submit">Save</button></p>
-  </form>
-</body>
+kahnacademy.com</textarea>
+							<span class="help-block">One domain per line</span>
+						</div>
+					</div>
+					<div class="control-group">
+						<div class="controls">
+							<button type="submit" class="btn btn-success">Save</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+		<footer class="footer">
+		<div class="container">
+			<div>
+				<ul>
+					<li>Copyright &copy; 2012 OCDevel LLC</li>
+					<li>
+					<a target="_blank" href="http://habitrpg.com/splash.html">About</a>
+					</li>
+					<li>
+					<a target="_blank" href="http://habitrpg.tumblr.com/">Blog</a>
+					</li>
+					<li>
+					<a target="_blank" href="https://github.com/lefnire/habitrpg/issues?state=open">Bugs</a>
+					</li>
+					<li>
+					<a target="_blank" href="https://trello.com/board/habitrpg/50e5d3684fe3a7266b0036d6">Features</a>
+					</li>
+					<li>
+					<a target="_blank" href="https://github.com/lefnire/habitrpg/wiki/FAQ">FAQ</a>
+					</li>
+					<li>
+					<a target="_blank" href="https://github.com/lefnire/habitrpg/wiki/API">API</a>
+					</li>
+					<li>
+					<a target="_blank" href="https://github.com/lefnire/habitrpg#contact">Contact</a>
+					</li>
+					<li>
+					<a target="_blank" href="http://habitrpg.com/privacy">Privacy</a>
+					</li>
+					<li>
+					<a target="_blank" href="http://habitrpg.com/terms">Terms</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		</footer>
+		<div id="hidden">
+			<div class="alert">
+				<button class="close" data-dismiss="alert">&times;</button>
+			</div>
+		</div>
+	</body>
 </html>
