Added extra devider

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
 				<div class="span12">
 				<div id="workStatus"></div>
 					<ul class="nav nav-list">
+						<li class="divider"></li>
 						<li><a href="http://www.habitrpg.com" target="_blank">HabitRPG</a></li>
 						<li><a href="options.html" target="_blank">Options</a></li>
 						<li class="divider"></li>
