--- a/options.html
+++ b/options.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 		<title>HabitRPG Chrome Settings</title>
-		<script type="text/javascript" src="vendor/jquery.js"></script>
-		<script type="text/javascript" src="vendor/bootstrap.min.js"></script>
-		<script type="text/javascript" src="options.js"></script>
+		<script type="text/javascript" src="scripts/jquery.js"></script>
+		<script type="text/javascript" src="scripts/bootstrap.min.js"></script>
+		<script type="text/javascript" src="scripts/options.js"></script>
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
