--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-		<script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
-		<script type="text/javascript" src="popup.js"></script>
+		<script type="text/javascript" src="scripts/jquery.js"></script>
+		<script type="text/javascript" src="scripts/popup.js"></script>
 		<link rel="stylesheet" href="css/popup.css" type="text/css" />
 	</head>
 	<body>
