--- a/options.html
+++ b/options.html
@@ -19,20 +19,21 @@
 		</div>
 		<br />
 		<div class="container" id="wrap">
-			<div class="row">
+		
+			<div class="span4">
 				<div id="messages"></div>
 
 				<form id="habitrpgForm" class="form-horizontal">
 					<div class="control-group">
-						<label for="uid" class="control-label">HabitRPG UserId:</label>
+						<label title="Find this under your settings menu on the HabitRPG Website" for="uid" class="control-label">HabitRPG UserId:</label>
 						<div class="controls"><input type="text" id="uid" name="uid" /></div>
 					</div>
 					<div class="control-group">
-						<label for="apiToken" class="control-label">HabitRPG API Token:</label>
+						<label title="Find this under your settings menu on the HabitRPG Website" for="apiToken" class="control-label">HabitRPG API Token:</label>
 						<div class="controls"><input id="apiToken" name="apiToken" type="text" /></div>
 					</div>
 					<div class="control-group" id="workHours">
-						<label class="control-label">Work Hours</label>
+						<label title="The hours of the day that you'll be punished for lingering on your unproductive websites" class="control-label">Work Hours</label>
 						<div class="controls">
 							<input min="0" id="workStart" max="24" maxlength="2" type="number" size="2" />
 							to
@@ -41,13 +42,13 @@
 						</div>
 					</div>
 					<div class="control-group">
-						<label for="interval" class="control-label">Score every</label>
+						<label title="How many minutes on a website until you are punished or rewarded" for="interval" class="control-label">Score every</label>
 						<div class="controls">
 							<input type="number" name="interval" size="2" min="5" max="30" maxlength="2" id="interval" /> minutes
 						</div>
 					</div>
 					<div class="control-group">
-						<label for="viceDomains" class="control-label">Websites where you procrastinate</label>
+						<label title="Vice Domains: Websites you really shouldn't be lingering on during the productive hours of the day; one domain per line" for="viceDomains" class="control-label">Websites where you procrastinate</label>
 						<div class="controls">
 							<textarea id="viceDomains" name="viceDomains" rows="10">
 reddit.com
@@ -57,7 +58,7 @@ facebook.com</textarea>
 						</div>
 					</div>
 					<div class="control-group">
-						<label for="goodDomains" class="control-label">Websites where you're productive</label>
+						<label title="Good Domains: Websites you are rewarded for ultilising; one domain per line" for="goodDomains" class="control-label">Websites where you're productive</label>
 						<div class="controls">
 							<textarea id="goodDomains" name="goodDomains" rows="10">
 lifehacker.com
@@ -72,6 +73,24 @@ kahnacademy.com</textarea>
 						</div>
 					</div>
 				</form>
+			</div>
+			
+			<div class="span6 offset1" >
+			<h4>About</h4>
+			<p><a href="https://habitrpg.com/">HabitRPG</a> is a tracker app which treats your goals like a Role Playing Game to help you be more productive. This extension will help to stop you wasting away the day on those unproductive websites you know just love the browse. Sites like Facebook or Reddit can eat away the hours of your day when you should be working hard on websites which help you achieve your goals.</p>
+						
+			<h4>Changelog v0.1.3</h4>
+			<ul>
+			<li>Added CSS styles to most elements thanks to <a href="https://github.com/cgardner">@cgardner</a></li>
+			<li>Fixed requiring restart after first input of UID & APIToken - <a href="https://github.com/cgardner">@cgardner</a> again.</li>
+			<li>Added a display for work-hours in the pop-up.</li>
+			<li>Changed the alert for not having UID or APIToken to a webkit notifaction.</li>
+			<li>Added tooltips for options elements!</li>
+			<li>Started writing these fancy changlogs!</li>
+			</ul>
+			
+			
+			
 			</div>
 		</div>
 		<footer class="footer">
