Added Work Days with Cloud Storage

--- a/options.html
+++ b/options.html
@@ -32,6 +32,34 @@
 						<label title="Find this under your settings menu on the HabitRPG Website" for="apiToken" class="control-label">HabitRPG API Token:</label>
 						<div class="controls"><input id="apiToken" name="apiToken" type="text" /></div>
 					</div>
+					
+					<div class="control-group">
+					<p class="control-label" title="Days in which work hours are in effect">Work Days</p>
+					<div class="span2">
+					<label>
+					<input type="checkbox" id="workMon"> Monday
+					</label>
+					<label>
+					<input type="checkbox" id="workTues"> Tuesday
+					</label>
+					<label>
+					<input type="checkbox" id="workWed"> Wednesday
+					</label>
+					<label>
+					<input type="checkbox" id="workThur"> Thursday
+					</label>
+					<label>
+					<input type="checkbox" id="workFri"> Friday
+					</label>
+					<label>
+					<input type="checkbox" id="workSat"> Saturday
+					</label>
+					<label>
+					<input type="checkbox" id="workSun"> Sunday
+					</label>
+					</div>
+					</div>
+					
 					<div class="control-group" id="workHours">
 						<label title="The hours of the day that you'll be punished for lingering on your unproductive websites" class="control-label">Work Hours</label>
 						<div class="controls">
