--- a/options.html
+++ b/options.html
@@ -111,8 +111,17 @@ kahnacademy.com</textarea>
 			<p><a href="https://habitrpg.com/">HabitRPG</a> is a tracker app which treats your goals like a Role Playing Game to help you be more productive. This extension will help to stop you wasting away the day on those unproductive websites you know you just love to browse. Sites like Facebook or Reddit can eat away the hours of your day when you should be working hard on websites which help you achieve your goals.</p>
 			
 			<p>The extension will add a Habit to your <a href="https://habitrpg.com/">HabitRPG</a> user entitled "Browsing Productivity" so you can see how often you are punished or rewarded for your browsing habits.</p>
+			
+			<h4>Changelog v0.1.5</h4>
+			<h5>11/02/2013</h5>
+			
+			<ul>
+			<li>Added cloud storage saving thanks to  <a href="https://github.com/ashjolliffe">@AshJolliffe</a></li>
+			<li>Due to demand have added Work Days feature.</li>
+			</ul>
 						
 			<h4>Changelog v0.1.4</h4>
+			<h5>10/02/2013</h5>
 			<ul>
 			<li>Added CSS styles to most elements thanks to <a href="https://github.com/cgardner">@cgardner</a></li>
 			<li>Fixed requiring restart after first input of UID & APIToken - <a href="https://github.com/cgardner">@cgardner</a> again.</li>
