--- a/options.html
+++ b/options.html
@@ -91,7 +91,7 @@ facebook.com</textarea>
 							<textarea id="goodDomains" name="goodDomains" rows="10">
 lifehacker.com
 codecademy.com
-kahnacademy.com</textarea>
+khanacademy.com</textarea>
 							<span class="help-block">One domain per line</span>
 						</div>
 					</div>
