Added user stats to notification

--- a/options.html
+++ b/options.html
@@ -90,7 +90,7 @@ facebook.com</textarea>
 							<textarea id="goodDomains" name="goodDomains" rows="10">
 lifehacker.com
 codecademy.com
-khanacademy.com</textarea>
+khanacademy.org</textarea>
 							<span class="help-block">One domain per line</span>
 						</div>
 					</div>
