--- a/options.html
+++ b/options.html
@@ -33,7 +33,7 @@
 					</div>
 					
 					<div class="control-group">
-					<p class="control-label" title="Days in which work hours are in effect">Work Days</p>
+					<label class="control-label" title="Days in which work hours are in effect">Work Days</label>
 					<div class="span2">
 					<label>
 					<input type="checkbox" id="workMon"> Monday
@@ -112,11 +112,12 @@ khanacademy.org</textarea>
 			<p>The extension will add a Habit to your <a href="https://habitrpg.com/">HabitRPG</a> user entitled "Browsing Productivity" so you can see how often you are punished or rewarded for your browsing habits.</p>
 			
 			<h4>Changelog v0.1.5</h4>
-			<h5>11/02/2013</h5>
+			<h5>12/02/2013</h5>
 			
 			<ul>
-			<li>Added cloud storage saving thanks to  <a href="https://github.com/ashjolliffe">@AshJolliffe</a></li>
-			<li>Due to demand have added Work Days feature.</li>
+			<li>Added cloud storage saving thanks to <a href="https://github.com/ashjolliffe">@AshJolliffe</a> - Log into your Google Account in Chrome to use.</li>
+			<li>Due to demand have added Work Days to toggle days that Work Hours take effect on.</li>
+			<li>Added extra warnings if you have low HP when scored or entering a vice site.</li>
 			</ul>
 						
 			<h4>Changelog v0.1.4</h4>
