--- a/options.html
+++ b/options.html
@@ -100,7 +100,7 @@ khanacademy.org</textarea>
 						</div>
 					</div>
 					<div class="controls">
-							<a id="reDownload" href="#">Redownload data</a>
+							<a id="reDownload" href="#">Download Cloud Data</a>
 					</div>
 				</form>
 			</div>
