Addition to changelog

--- a/options.html
+++ b/options.html
@@ -117,7 +117,8 @@ khanacademy.org</textarea>
 			<ul>
 			<li>Added cloud storage saving thanks to <a href="https://github.com/ashjolliffe">@AshJolliffe</a> - Log into your Google Account in Chrome to use.</li>
 			<li>Due to demand have added Work Days to toggle days that Work Hours take effect on.</li>
-			<li>Added extra warnings if you have low HP when scored or entering a vice site.</li>
+			<li>Added character data to notifications</li>
+			<li>Added warnings if you have low HP when scored on or entering a vice site.</li>
 			</ul>
 						
 			<h4>Changelog v0.1.4</h4>
