Inital Todo app linkage

--- a/options.html
+++ b/options.html
@@ -61,6 +61,12 @@ khanacadamy.org</textarea></p>
     <p><label for="tomatoesIsActive">Enabled</label><input id="tomatoesIsActive" type="checkbox" /></p>
         
   </div>
+
+  <div class="section">
+    <h4>Todo apps linkage</h4>
+    <p><label for="todosIsActive">Enabled</label><input id="todosIsActive" type="checkbox" /></p>
+        
+  </div>
   
   <p><button type="submit">Save</button></p>
 
