--- a/options.html
+++ b/options.html
@@ -22,12 +22,13 @@
     <div id="EmptyUID" class="state">If the UserId or API token is field empty, this extension does not work</div>
     <label for="uid">HabitRPG UserId:</label><input id="uid" type="text"/></br>
     <label for="apiToken">HabitRPG API Token:</label><input id="apiToken" type="text"/></br> 
+    <label for="isCloudStorage">Settigs save to the cloud</label><input id="isCloudStorage" type="checkbox" />
 
   <div class="section">
     <h2>Host watcher</h2>
     <p><label for="siteWatcherIsActive">Enabled</label><input id="siteWatcherIsActive" type="checkbox" /></p>
     <p><label for="sendInterval">Send to HabitRPG interval:</label><input type="number" id="sendInterval" value="25" min="5" /> minute <br /></p>
-    <label for="activatorName">How would you like to control the extension:</label>
+    <label for="activatorName">How would you like to control the sitewatcher:</label>
     <select id="activatorName">
       <option value="alwayson">Always on</option>
       <option value="webpage">Via website</option>
@@ -69,7 +70,7 @@ khanacadamy.org</textarea></p>
     <h3>Supported Todo sites</h3>
     <ul>
       <li><a href="http://asana.com" target="_blank">Asana</a></li>
-      <li><a href="http://worklowy.com" target="_blank">Workflowy</a></li>
+      <li><a href="https://workflowy.com/" target="_blank">Workflowy</a></li>
       <li><a href="https://mail.google.com/mail/tasks/" target="_blank">Google Tasks</a></li>
     </ul>
   </div>
