--- a/common/html/options.html
+++ b/common/html/options.html
@@ -27,7 +27,10 @@
   <div class="section">
     <h2>Host watcher</h2>
     <p><label for="siteWatcherIsActive">Enabled</label><input id="siteWatcherIsActive" type="checkbox" /></p>
-    <p><label for="sendInterval">Send to HabitRPG interval:</label><input type="number" id="sendInterval" value="25" min="5" /> minute <br /></p>
+    <p>
+      <label for="sendInterval">Send to HabitRPG interval:</label><input type="number" id="sendInterval" value="25" min="5" /> minute <br />
+      <label for="isVerboseSiteWatcher">Would you like receive notification when enter or live a detection area? </label><input type="checkbox" id="isVerboseSiteWatcher" />
+    </p>
     <label for="activatorName">How would you like to control the sitewatcher:</label>
     <select id="activatorName">
       <option value="alwayson">Always on</option>
