Tomato.es: switchable over break/work penalty

--- a/common/html/options.html
+++ b/common/html/options.html
@@ -64,7 +64,7 @@ khanacadamy.org</textarea></p>
   <div class="section">
     <h2><a href="http://tomato.es" target="_blank">Tomatoes</a> linkage</h2>
     <p><label for="tomatoesIsActive">Enabled</label><input id="tomatoesIsActive" type="checkbox" /></p>
-        
+    <label for="tomatoesOverTimePenalty">Punishment when you don't keep the pomodore intervals? </label><input id="tomatoesOverTimePenalty" type="checkbox" />        
   </div>
 
   <div class="section">
