Browser action site watcher state control button works

--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -10,7 +10,7 @@
             <h2>Site watcher</h2>
             <div id="Sitewatcher">
                 <div class="state">State: <button class="value"></button></div>
-                <div class="time">Remaing time until sending:
+                <div class="time">Remaining time until sending:
                     <div class="bar"><div></div></div>
                 </div>
             </div>
