--- a/common/html/options.html
+++ b/common/html/options.html
@@ -3,82 +3,74 @@
   <title>HabitRPG Chrome Settings</title>
   <script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
   <script type="text/javascript" src="options.js"></script>
-  </script>
-  <style>
-    input[type=number] { width: 50px; }
-    input { margin-left: 5px; margin-right: 5px; }
-    .state { display: none; }
-    .state.good { background: green; display: block; }
-    .state.bad { background: red; display: block; }
-    .visible { display: block !important; }
-    .day { display: inline-block; margin: 5px; text-align: center; }
-    .section {background: #efefef;}
-    #ActivatorOptions > div { display: none; }
-  </style>
+  <link rel="stylesheet" type="text/css" href="css/common.css" />
+  <link rel="stylesheet" type="text/css" href="css/options.css" />
 </head>
 <body>
-  <div class="state" id="status">Options Saved.</div>
+  <div id="head">
+      <h1>HabitRPG Extension Settings</h1>
+  </div>
   <form id="habitrpgForm">
-    <div id="EmptyUID" class="state">If the UserId or API token is field empty, this extension does not work</div>
-    <label for="uid">HabitRPG UserId:</label><input id="uid" type="text"/></br>
-    <label for="apiToken">HabitRPG API Token:</label><input id="apiToken" type="text"/></br> 
-    <label for="isCloudStorage">Settigs save to the cloud</label><input id="isCloudStorage" type="checkbox" />
 
-  <div class="section">
-    <h2>Host watcher</h2>
-    <p><label for="siteWatcherIsActive">Enabled</label><input id="siteWatcherIsActive" type="checkbox" /></p>
-    <p>
-      <label for="sendInterval">Send to HabitRPG interval:</label><input type="number" id="sendInterval" value="25" min="5" /> minute <br />
-      <label for="isVerboseSiteWatcher">Would you like receive notification when enter or live a detection area? </label><input type="checkbox" id="isVerboseSiteWatcher" />
-    </p>
-    <label for="activatorName">How would you like to control the sitewatcher:</label>
-    <select id="activatorName">
-      <option value="alwayson">Always on</option>
-      <option value="webpage">Via website</option>
-      <option value="tomatoes">Via http://tomato.es</option>
-      <option value="days">Days and hours</option>
-    </select><br />
-    <div id="ActivatorOptions">
-      <div id="ActOpts-webpage">
-        <label for="watchedUrl">Url:</label><input type="text" id="watchedUrl" /> ( Started with 'http://' or 'https://' or leave completle blank)
-      </div>
-      <div id="ActOpts-days">
-      </div>
+    <div class="section box neutral">
+      <div id="EmptyUID" class="state">If the UserId or API token is field empty, this extension does not work</div>
+      <label for="uid">HabitRPG UserId:</label><input id="uid" class="box" type="text"/></br>
+      <label for="apiToken">HabitRPG API Token:</label><input id="apiToken" class="box" type="text"/></br>
+      <p><label for="isCloudStorage">Settigs save to the cloud? </label><input id="isCloudStorage" class="box" type="checkbox" /></p>
+      <button class="btn" type="submit">Save</button>
+      <div class="state" id="status">Options Saved.</div>
     </div>
-    <p>Websites where you procrastinate (one domain per line)</p>
-    <p><textarea id="viceDomains" rows="10">
+
+    <div class="section box">
+      <h2>Host watcher <label for="siteWatcherIsActive">Enabled</label><input id="siteWatcherIsActive" class="box" type="checkbox" /></h2>
+      <p>
+        <label for="sendInterval">Send to HabitRPG interval:</label><input class="box" type="number" id="sendInterval" value="25" min="5" /> minute <br />
+      </p>
+      <label for="activatorName">How would you like to control the sitewatcher:</label>
+      <select id="activatorName" class="box">
+        <option value="alwayson">Always on</option>
+        <option value="webpage">Via website</option>
+        <option value="tomatoes">Via http://tomato.es</option>
+        <option value="days">Days and hours</option>
+      </select><br />
+      <div id="ActivatorOptions">
+        <div id="ActOpts-webpage">
+          <label for="watchedUrl">Url:</label><input class="box" type="text" id="watchedUrl" /> <br />( Started with 'http://' or 'https://' or leave completle blank)
+        </div>
+        <div id="ActOpts-days">
+        </div>
+      </div>
+      <div class="floatContainer">
+      <div class="left">Websites where you procrastinate (one domain per line)
+      <textarea id="viceDomains" rows="10" class="box">
 reddit.com
 9gag.com
-facebook.com</textarea></p>
-<p>Websites where you're productive (one domain per line)</p>
-  <p><textarea id="goodDomains" rows="10">
+facebook.com</textarea></div>
+      <div class="right">Websites where you're productive (one domain per line)
+      <textarea id="goodDomains" rows="10" class="box">
 lifehacker.com
 codeacadamy.com
-khanacadamy.org</textarea></p>
-    
-    If you type an empty row into one section, then the extension will detect when the chrome lost or has focus<br/>
-    eg: add the empty line to the top of the productive websites. save your settings. and switch to your working program. Voala the extension keep thinking you are working:)
-    
-  </div>
+khanacadamy.org</textarea></div>
+      </div>
+      If you type an empty row into one section, then the extension will detect when the chrome lost or has focus<br/>
+      eg: add the empty line to the top of the productive websites. save your settings. and switch to your working program. Voala the extension keep thinking you are working:)
+      <p><label for="isVerboseSiteWatcher">Would you like receive notification when enter or live a detection area? </label><input class="box" type="checkbox" id="isVerboseSiteWatcher" /></p>
+    </div>
 
-  <div class="section">
-    <h2><a href="http://tomato.es" target="_blank">Tomatoes</a> linkage</h2>
-    <p><label for="tomatoesIsActive">Enabled</label><input id="tomatoesIsActive" type="checkbox" /></p>
-    <label for="tomatoesOverTimePenalty">Punishment when you don't keep the pomodore intervals? </label><input id="tomatoesOverTimePenalty" type="checkbox" />        
-  </div>
+    <div class="section box">
+      <h2><a href="http://tomato.es" target="_blank">Tomatoes</a> linkage <label for="tomatoesIsActive">Enabled</label><input id="tomatoesIsActive" class="box" type="checkbox" /></h2>
+      <label for="tomatoesOverTimePenalty">Punishment when you don't keep the pomodore intervals? </label><input id="tomatoesOverTimePenalty" class="box" type="checkbox" />        
+    </div>
 
-  <div class="section">
-    <h2>Todo apps linkage</h2>
-    <p><label for="todosIsActive">Enabled</label><input id="todosIsActive" type="checkbox" /></p>
-    <h3>Supported Todo sites</h3>
-    <ul>
-      <li><a href="http://asana.com" target="_blank">Asana</a></li>
-      <li><a href="https://workflowy.com/" target="_blank">Workflowy</a></li>
-      <li><a href="https://mail.google.com/mail/tasks/" target="_blank">Google Tasks</a></li>
-    </ul>
-  </div>
-  
-  <p><button type="submit">Save</button></p>
+    <div class="section box">
+      <h2>Todo apps linkage <label for="todosIsActive">Enabled</label><input id="todosIsActive" class="box" type="checkbox" /></h2>
+      <ul class="inlineList">
+        <li>Supported Todo sites: </li>
+        <li><a href="http://asana.com" target="_blank">Asana</a></li>
+        <li><a href="https://workflowy.com/" target="_blank">Workflowy</a></li>
+        <li><a href="https://mail.google.com/mail/tasks/" target="_blank">Google Tasks</a></li>
+      </ul>
+    </div>
 
   </form>
 </body>
