--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -2,16 +2,16 @@
     <head>
         <script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
         <script type="text/javascript" src="popup.js"></script>
-
+        <link rel="stylesheet" type="text/css" href="css/common.css" />
         <link rel="stylesheet" type="text/css" href="css/popup.css" />
     </head>
     <body>
         <div id="Main">
             <h2>Site watcher</h2>
             <div id="Sitewatcher">
-                <div class="state">State: <button class="value"></button></div>
+                <div class="state">State: <button class="value btn"></button></div>
                 <div class="time">Remaining time until sending:
-                    <div class="bar"><div></div></div>
+                    <div class="bar box"><div></div></div>
                 </div>
             </div>
             <h2>Your Character</h2>
