Better health and exp progress in the popup window

--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -22,10 +22,10 @@
                 </div>
                 <h2>Your Character</h2>
                 <ul id="CharacterStats">
-                    <li class="lvl"><span>Level:</span> <span class="value"></span></li>
-                    <li class="hp"><span>Health:</span> <span class="value"></span></li>
-                    <li class="exp"><span>Exp:</span> <span class="value"></span></li>
-                    <li class="gp"><span>Gold:</span> <span class="value"></span></li>
+                    <li class="lvl"><span>Level:</span> <div><span class="value"></span></div></li>
+                    <li class="hp"><span>Health:</span> <div class="bar box"><div></div><span class="value"></span></div></li>
+                    <li class="exp"><span>Exp:</span> <div class="bar box"><div></div><span class="value"></span></div></li>
+                    <li class="gp"><span>Gold:</span> <div><span class="value"></span></div></li>
                 </ul>
             </div>
             <ul id="Menu">
