Uncompleted daily tasks showed in popup

--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -27,6 +27,11 @@
                     <li class="exp"><span>Exp:</span> <div class="bar box"><div></div><span class="value"></span></div></li>
                     <li class="gp"><span>Gold:</span> <div><span class="value"></span></div></li>
                 </ul>
+                <div id="UncompletedDailyTasks">
+                    <h2>Uncompleted daily tasks</h2>
+                    <ul>
+                    </ul>
+                </div>
             </div>
             <ul id="Menu">
                 <li><a href="options.html" target="_blank">Options</a></li>
