Display remaining time for sending with numbers too.

--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -17,7 +17,7 @@
                 <div id="Sitewatcher">
                     <div class="state">State: <button class="value btn"></button></div>
                     <div class="time">Remaining time until sending:
-                        <div class="bar box"><div></div></div>
+                        <div class="bar box"><span class="value"></span><div></div></div>
                     </div>
                 </div>
                 <h2>Your Character</h2>
