--- a/common/html/options.html
+++ b/common/html/options.html
@@ -16,7 +16,7 @@
       <div id="EmptyUID" class="state">If the UserId or API token is field empty, this extension does not work</div>
       <label for="uid">HabitRPG UserId:</label><input id="uid" class="box" type="text"/></br>
       <label for="apiToken">HabitRPG API Token:</label><input id="apiToken" class="box" type="text"/></br>
-      <p><label for="isCloudStorage">Settigs save to the cloud? </label><input id="isCloudStorage" class="box" type="checkbox" /></p>
+      <p><label for="isCloudStorage">Save settings to the cloud </label><input id="isCloudStorage" class="box" type="checkbox" /></p>
       <button class="btn" type="submit">Save</button>
       <div class="state" id="status">Options Saved.</div>
     </div>
