fix typo [codeacadamy.com -> codecademy.com]

--- a/common/html/options.html
+++ b/common/html/options.html
@@ -49,7 +49,7 @@ facebook.com</textarea></div>
       <div class="right">Websites where you're productive (one domain per line)
       <textarea id="goodDomains" rows="10" class="box">
 lifehacker.com
-codeacadamy.com
+codecademy.com
 khanacadamy.org</textarea></div>
       </div>
       If you type an empty row into one section, then the extension will detect when the chrome lost or has focus<br/>
