Changed some spelling mistakes. khanacadamy => khanacademy

--- a/common/html/options.html
+++ b/common/html/options.html
@@ -50,7 +50,7 @@ facebook.com</textarea></div>
       <textarea id="goodDomains" rows="10" class="box">
 lifehacker.com
 codecademy.com
-khanacadamy.org</textarea></div>
+khanacademy.org</textarea></div>
       </div>
       If you type an empty row into one section, then the extension will detect when the chrome lost or has focus<br/>
       eg: add the empty line to the top of the productive websites. save your settings. and switch to your working program. Voala the extension keep thinking you are working:)
