fixed spelling errors in the readme, and updated links to point to the new locations in popup.html

--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -36,9 +36,9 @@
             <ul id="Menu">
                 <li><a href="options.html" target="_blank">Options</a></li>
                 <li><a href="http://www.habitrpg.com" target="_blank">HabitRPG</a></li>
-                <li><a target="_blank" href="https://github.com/lefnire/habitrpg-chrome/issues">Extension Bugs</a></li>
-                <li><a target="_blank" href="http://habitrpg.tumblr.com/">Blog</a></li>
-                <li><a target="_blank" href="https://github.com/lefnire/habitrpg/wiki/FAQ">FAQ</a></li>
+                <li><a target="_blank" href="https://github.com/habitrpg/habitrpg-chrome/">Extension Bugs</a></li>
+                <li><a target="_blank" href="http://blog.habitrpg.com/">Blog</a></li>
+                <li><a target="_blank" href="http://habitrpg.wikia.com/wiki/FAQ">FAQ</a></li>
                 <li><a target="_blank" href="https://github.com/lefnire/habitrpg#contact">Contact for HabitRPG</a></li>
             </ul>
         </div>
