--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -2,7 +2,7 @@
     <head>
         <script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
         <script type="text/javascript" src="popup.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/common.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="css/popup.css" />
     </head>
     <body>
