Clean up the variable names

--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -21,7 +21,7 @@
       <!-- If able to connect to the server -->
       <div id="Connected">
 
-        <div id="sitewatcher">
+        <div id="site_watcher">
           <h3>Site watcher</h3>
           <button id="state" class="btn btn-block"></button>
           Remaining time until sending:
@@ -29,6 +29,11 @@
             <div id="time_bar" class="progress-bar"></div>
             <span id="time_data"></span>
           </div>
+        </div>
+
+        <div id="character_stats">
+          <h3>Your Character</h3>
+          
         </div>
 
       </div>
