Added Player stats
- Edited the colors a bit
- Added player bars
- It is now back to where it was before I removed everything

--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -33,7 +33,22 @@
 
         <div id="character_stats">
           <h3>Your Character</h3>
-          
+          <div class="progress">
+            <div id="char_lvl_bar" class="progress-bar"></div>
+            <span id="char_lvl_data"></span>
+          </div>
+          <div class="progress">
+            <div id="char_hp_bar" class="progress-bar"></div>
+            <span id="char_hp_data"></span>
+          </div>
+          <div class="progress">
+            <div id="char_exp_bar" class="progress-bar"></div>
+            <span id="char_exp_data"></span>
+          </div>
+          <div class="progress">
+            <div id="char_gp_bar" class="progress-bar"></div>
+            <span id="char_gp_data"></span>
+          </div>
         </div>
 
       </div>
