Added the ability to view your tasks
- You can see your task
- If you do not have uncompleted ones the blocks do not display
- Make the popup a bit wider for the scroll bar
- Added some <hr> tags to space things nicely

--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -31,6 +31,8 @@
           </div>
         </div>
 
+        <hr />
+
         <div id="character_stats">
           <h3>Your Character</h3>
           <div class="progress">
@@ -48,6 +50,26 @@
           <div class="progress">
             <div id="char_gp_bar" class="progress-bar"></div>
             <span id="char_gp_data"></span>
+          </div>
+        </div>
+
+        <hr />
+
+        <div id="task_lists">
+          <!-- Todo List -->
+          <div id="list_todo">
+            <ul class="list-group">
+            </ul>
+          </div>
+          <!-- Daily List -->
+          <div id="list_dailys">
+            <ul class="list-group">
+            </ul>
+          </div>
+          <!-- Habit List -->
+          <div id="list_habits">
+            <ul class="list-group">
+            </ul>
           </div>
         </div>
 
