fixes sending to server time format and label

--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -24,7 +24,7 @@
         <div id="site_watcher">
           <h3>Site watcher</h3>
           <button id="state" class="btn btn-block"></button>
-          Remaining time until sending:
+          Next upload in:
           <div class="progress">
             <div id="time_bar" class="progress-bar"></div>
             <span id="time_data"></span>
