Add Markdown support.

--- a/common/html/popup.html
+++ b/common/html/popup.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="css/popup.css" />
     <!-- Javascript Imports -->
     <script type="text/javascript" src="vendor/jquery-1.8.0.min.js"></script>
+    <script type="text/javascript" src="vendor/markdown.js"></script>
     <script type="text/javascript" src="popup.js"></script>
   </head>
   <body>
