--- a/chrome/data/background.html
+++ b/chrome/data/background.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>HabitRPG backgound</title>
+  <title>Habitica backgound</title>
   <script type="text/javascript" src="vendor/jquery-2.2.0.min.js"></script>
   <script type="text/javascript" src="background.js"></script>
 </head>
