--- a/common/html/options.html
+++ b/common/html/options.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>HabitRPG Chrome Settings</title>
+  <title>Habitica Chrome Settings</title>
   <script type="text/javascript" src="vendor/jquery-2.2.0.min.js"></script>
   <script type="text/javascript" src="options.js"></script>
   <link rel="stylesheet" type="text/css" href="css/common.css" />
@@ -8,14 +8,14 @@
 </head>
 <body>
   <div id="head">
-      <h1>HabitRPG Extension Settings</h1>
+      <h1>Habitica Extension Settings</h1>
   </div>
-  <form id="habitrpgForm">
+  <form id="habiticaForm">
 
     <div class="section box neutral">
       <div id="EmptyUID" class="state">If either field is empty, this extension does not work.</div>
-      <label for="uid">HabitRPG User ID:</label><input id="uid" class="box" type="text"/></br>
-      <label for="apiToken">HabitRPG API Token:</label><input id="apiToken" class="box" type="text"/></br>
+      <label for="uid">Habitica User ID:</label><input id="uid" class="box" type="text"/></br>
+      <label for="apiToken">Habitica API Token:</label><input id="apiToken" class="box" type="text"/></br>
       <p><label for="isCloudStorage">Save settings to the cloud </label><input id="isCloudStorage" class="box" type="checkbox"/></p>
       <button class="btn" type="submit">Save</button>
       <div class="state" id="status">Options Saved.</div>
@@ -24,7 +24,7 @@
     <div class="section box">
       <h2>Host watcher <label for="siteWatcherIsActive">Enabled</label><input id="siteWatcherIsActive" class="box" type="checkbox" /></h2>
       <p>
-        <label for="sendInterval">Send to HabitRPG interval:</label><input class="box" type="number" id="sendInterval" value="25" min="5" /> minute(s)<br/>
+        <label for="sendInterval">Send to Habitica interval:</label><input class="box" type="number" id="sendInterval" value="25" min="5" /> minute(s)<br/>
       </p>
       <label for="activatorName">How would you like to control the sitewatcher:</label>
       <select id="activatorName" class="box">
