Disable the todos.

--- a/common/html/options.html
+++ b/common/html/options.html
@@ -62,7 +62,7 @@ For example, if you add the empty line to the top of the productive websites lis
       <label for="tomatoesOverTimePenalty">Punishment when you don't keep the Pomodoro intervals? </label><input id="tomatoesOverTimePenalty" class="box" type="checkbox" />        
     </div>
 
-    <div class="section box">
+    <!--<div class="section box">
       <h2>To-do app integration <label for="todosIsActive">Enabled</label><input id="todosIsActive" class="box" type="checkbox" /></h2>
       <ul class="inlineList">
         <li>Supported to-do sites: </li>
@@ -70,7 +70,7 @@ For example, if you add the empty line to the top of the productive websites lis
         <li><a href="https://workflowy.com/" target="_blank">Workflowy</a></li>
         <li><a href="https://mail.google.com/mail/tasks/" target="_blank">Google Tasks</a></li>
       </ul>
-    </div>
+    </div>-->
 
   </form>
 </body>
