--- a/common/html/options.html
+++ b/common/html/options.html
@@ -31,6 +31,7 @@
         <option value="alwayson">Always on</option>
         <option value="webpage">Via website</option>
         <option value="tomatoes">Via http://tomato.es</option>
+        <option value="pomodoroTracker">Via https://pomodoro-tracker.com</option>
         <option value="days">Scheduled times</option>
       </select><br />
       <div id="ActivatorOptions">
